[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wnb"
dynamic = ["version"]
authors = [
    { name = "Mehdi Samsami", email = "mehdisamsami@live.com" },
]
description = "Python library for the implementations of general and weighted naive Bayes (WNB) classifiers."
readme = "README.md"
readme-content-type = "text/markdown"
keywords = [
    "python",
    "machine learning",
    "bayes",
    "naive bayes",
    "classifier",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.8,<3.14"
dependencies = [
    "pandas>=1.4.1",
    "scipy>=1.8.0",
    "scikit-learn>=1.0.2",
    "typing-extensions>=4.8.0; python_full_version < '3.11'",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "isort",
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
    "ruff>=0.9.2",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/msamsami/wnb"
Repository = "https://github.com/msamsami/wnb"
Issues = "https://github.com/msamsami/wnb/issues"

[tool.hatch.version]
path = "wnb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["wnb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = ["wnb"]
omit = [
    "wnb/dist.py",
]
context = '${CONTEXT}'
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_also = [
    "pass",
    "if __name__ == .__main__.:",
    "from typing import *",
    "def __repr__",
]

[tool.coverage.html]
show_contexts = true

[tool.ruff]
line-length = 110

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
known_first_party = ["wnb"]
