[metadata]
name = wnb
version = attr: wnb.__version__
author = Mehdi Samsami
author_email = mehdisamsami@live.com
description = General and Weighted Naive Bayes Classifiers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msamsami/weighted-naive-bayes
keywords = python, bayes, naivebayes, classifier, probabilistic
license = BSD

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    scipy
    scikit-learn

[options.extras_require]
dev =
    pytest
    black

[aliases]
test = pytest
