[metadata]
name = wnb
version = attr: wnb.__version__
author = Mehdi Samsami
author_email = mehdisamsami@live.com
url = https://github.com/msamsami/weighted-naive-bayes
description = General and Weighted Naive Bayes Classifiers
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE
keywords = python, bayes, naivebayes, classifier, probabilistic
classifiers = 
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License

[options]
include_package_data = True
packages = find:
python_requires = >=3.8, <=3.12
install_requires =
    pandas>=1.4.1
    scipy>=1.8.0
    scikit-learn>=1.0.2

[options.extras_require]
dev =
    pytest>=7.3.1
    black>=24.1.0
    tqdm>=4.65.0

[aliases]
test = pytest

[tool:pytest]
filterwarnings = 
    ignore
